ASM相关